--- a/illustrations.html
+++ b/illustrations.html
@@ -18,16 +18,17 @@
     <div class="content" span style="font-family:avenir">
       <h1>Illustrations</h1>
         <div>
-          <h2 class="phototypes">Book Covers</h2>
-            <img src="./assets/bookDesign.jpg" width="700">
-            <img src="./assets/bookDesign1.jpg" width="700">
+            <h2 class="phototypes">Book Covers</h2>
+              <img src="./assets/bookDesign.jpg" width="700" alt="Wishtree Cover 1">
+              <br/>
+              <br/>
+              <br/>
+              <img src="./assets/bookDesign1.jpg" width="700" alt="Wishtree Cover 2">
+            <br/>
+            <br/>
+            <h2 class="phototypes">Icon Design</h2>
+              <img src="./assets/IconDesign.jpg" width="600" alt="Social Media Icons">
         </div>
-        <br/>
-        <br/>
-        <div>
-          <h2 class="phototypes">Icon Design</h2>
-            <img src="./assets/IconDesign.jpg" width="700">
-
     </div>
     <footer>
       <p> &copy KM Designs by Kevin Martinez</p>
