--- a/design.html
+++ b/design.html
@@ -32,8 +32,8 @@
         <br/>
         <div>
           <h2 class="phototypes">FIRST Institue Brochure</h2>
-            <img src="./assets/FIRSTBrochure.jpg" width="1200">
-            <img src="./assets/FIRSTBrochure2.jpg" width="1200">
+            <img src="./assets/firstbrochure.jpg" width="1200">
+            <img src="./assets/firstbrochure2.jpg" width="1200">
         </div>
     </div>
 
