--- a/design.html
+++ b/design.html
@@ -22,6 +22,7 @@
             <img src="./assets/gucci.jpg" width="900" alt="Catalog Pg 1">
             <img src="./assets/gucci2.jpg" width="900" alt="Catalog Pg 2">
             <img src="./assets/gucci3.jpg" width="900" alt="Catalog Pg 3">
+            <img src="./assets/gucci4.jpg" width="900" alt="Catalog Pg 4">
         </div>
         <br/>
         <div>
