--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <a href="photography.html">Photography</a>
   <a href="illustrations.html">Illustrations</a>
   <a href="design.html">Design</a>
+  <a href="bonus.html">Bonus</a>
 </div>
 
 <section>
