--- a/bonus.html
+++ b/bonus.html
@@ -25,9 +25,45 @@
 
     <section>
       <div class="content">
-        <h1 span style="font-family:avenir">World Famous Egg Rolls</h1>
+        <h1 class="EggRoll" span style="font-family:avenir">World Famous Egg Rolls</h1>
+        <img src="./assets/eggRolls.png" width="500" alt="Philly Cheese Steak Egg Roll">
+        <br/>
+        <br/>
+        <h2 class="EggRoll" span style="font-family:avenir">Contact Us or Visit One of Our Three Locations!</h2>
+        <p class="EggRoll" span style="font-family:avenir">
+          Location
+          <br>
+          <b>Miami Gardens</b>
+          <br>
+          19401 NW 27th Ave, Miami Gardens, FL 33056
+          <br>
+          (305)-760-2627
+          <br/>
+          <br/>
+          <b>Lauderdale Lakes</b>
+          <br>
+          3684 W Oakland Park Blvd, Lauderdale Lakes, FL 33311
+          <br>
+          (954) 999-5444
+          <br/>
+          <br/>
+          <b>Boynton Beach</b>
+          <br>
+          1701 N Congress Ave, Boynton Beach, FL 33426
+          <br>
+          (561) 877-2303
+          <br/>
+          <br/>
+          <b>Contact Info</b>
+          <br>
+          Email: info@eatwf.com
       </div>
     </section>
+
+    <footer>
+      <p> &copy KM Designs by Kevin Martinez</p>
+    </footer>
+
 
   </body>
 </html>
