--- a/bonus.html
+++ b/bonus.html
@@ -8,11 +8,6 @@
     <title></title>
   </head>
   <body style="background-color:#FBFFF1">
-    <header>
-      <div class="logoHeader">
-        <img src="assets/worldfamousLogo.png" width="300px" alt="World Famous Logo">
-      </div>
-    </header>
 
     <div class="sidenav" span style="font-family:avenir">
       <a href="index.html">Home</a>
@@ -22,6 +17,12 @@
       <a href="design.html">Design</a>
       <a href="bonus.html">Bonus</a>
     </div>
+
+    <header>
+      <div class="logoHeader">
+        <img src="assets/worldfamousLogo.png" width="300px" alt="World Famous Logo">
+      </div>
+    </header>
 
     <section>
       <div class="content">
@@ -52,6 +53,9 @@
           1701 N Congress Ave, Boynton Beach, FL 33426
           <br>
           (561) 877-2303
+          <br/>
+          <br/>
+          <a href="https://eatwf.com/" span style="font-family:avenir;">Also, Check out our Official Website!</a>
           <br/>
           <br/>
           <b>Contact Info</b>
