--- a/photography.html
+++ b/photography.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <title>Photography</title>
   </head>
   <body style="background-color:#FBFFF1">
@@ -25,22 +27,34 @@
       <h2 class="phototypes">Landscape</h2>
         <div class="grid-container">
           <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0052.JPG" width="300" alt="Oregon">
           </div>
+          </div>
           <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0073.JPG" width="300" alt="Oregon">
           </div>
+          </div>
           <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0628.JPG" width="300" alt="Kirkwood, CA">
           </div>
+          </div>
           <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0681.JPG" width="300" alt="Santa Catalina Island, Avalon, CA">
           </div>
-          <div class="grid-item">
-            <img src="./assets/IMG_0661.JPG" width="300" alt="Kirkwood, CA">
           </div>
           <div class="grid-item">
+            <div data-aos="zoom-in">
+            <img src="./assets/IMG_0661.JPG" width="300" alt="Kirkwood, CA">
+          </div>
+          </div>
+          <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0667.JPG" width="300" alt="Kirkwood, CA">
+          </div>
           </div>
         </div>
     </div>
@@ -50,22 +64,34 @@
       <h2 class="phototypes">Graduation</h2>
         <div class="grid-container">
           <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0234.jpeg" width="300" alt="tassel">
           </div>
+          </div>
           <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0244.jpeg" width="300" alt="glitter">
           </div>
+          </div>
           <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0262.jpeg" width="300" alt="jump">
           </div>
+          </div>
           <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0387.jpg" width="300" alt="front angle top hat">
           </div>
-          <div class="grid-item">
-            <img src="./assets/IMG_0386.jpeg" width="300" alt="single hand hat hold">
           </div>
           <div class="grid-item">
+            <div data-aos="zoom-in">
+            <img src="./assets/IMG_0386.jpeg" width="300" alt="single hand hat hold">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0392.jpeg" width="300" alt="double hand back angle hold">
+            </div>
           </div>
         </div>
     </div>
@@ -75,16 +101,24 @@
       <h2 class="phototypes">Baby Birthday/Product Photography</h2>
         <div class="grid-container1">
           <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0495.jpeg" width="300" alt="Outdoor Aliyah">
+            </div>
           </div>
           <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0515.jpeg" width="300" alt="Indoor Aliyah">
+            </div>
           </div>
           <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0104.JPG" width="300" alt="Supreme Lighter #1">
+            </div>
           </div>
           <div class="grid-item">
+            <div data-aos="zoom-in">
             <img src="./assets/IMG_0107.JPG" width="300" alt="Supreme Lighter #2">
+            </div>
           </div>
         </div>
     </div>
@@ -93,5 +127,8 @@
       <p> &copy KM Designs by Kevin Martinez</p>
     </footer>
 
+    <script>
+    AOS.init();
+    </script>
   </body>
 </html>
