--- a/design.html
+++ b/design.html
@@ -20,21 +20,21 @@
       <h1>Design</h1>
         <div>
           <h2 class="phototypes">GUCCI Fashion Brochure</h2>
-            <img src="./assets/gucci.jpg" width="900" alt="Catalog Pg 1">
-            <img src="./assets/gucci2.jpg" width="900" alt="Catalog Pg 2">
-            <img src="./assets/gucci3.jpg" width="900" alt="Catalog Pg 3">
-            <img src="./assets/gucci4.jpg" width="900" alt="Catalog Pg 4">
+            <img class="DesignPics" src="./assets/gucci.jpg" width="900" alt="Catalog Pg 1">
+            <img class="DesignPics" src="./assets/gucci2.jpg" width="900" alt="Catalog Pg 2">
+            <img class="DesignPics" src="./assets/gucci3.jpg" width="900" alt="Catalog Pg 3">
+            <img class="DesignPics" src="./assets/gucci4.jpg" width="900" alt="Catalog Pg 4">
         </div>
         <br/>
         <div>
           <h2 class="phototypes">App Design</h2>
-            <img src="./assets/wya.jpg" width="1100">
+            <img class="DesignPics" src="./assets/wya.jpg" width="1100">
         </div>
         <br/>
         <div>
           <h2 class="phototypes">FIRST Institue Brochure</h2>
-            <img src="./assets/firstbrochure.jpg" width="1200">
-            <img src="./assets/firstbrochure2.jpg" width="1200">
+            <img class="DesignPics" src="./assets/firstbrochure.jpg" width="1200">
+            <img class="DesignPics" src="./assets/firstbrochure2.jpg" width="1200">
         </div>
     </div>
 
