--- a/photography.html
+++ b/photography.html
@@ -28,32 +28,32 @@
         <div class="grid-container">
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0052.JPG" width="300" alt="Oregon">
+            <img class="DesignPics" src="./assets/IMG_0052.JPG" width="300" alt="Oregon">
           </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0073.JPG" width="300" alt="Oregon">
+            <img class="DesignPics" src="./assets/IMG_0073.JPG" width="300" alt="Oregon">
           </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0628.JPG" width="300" alt="Kirkwood, CA">
+            <img class="DesignPics" src="./assets/IMG_0628.JPG" width="300" alt="Kirkwood, CA">
           </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0681.JPG" width="300" alt="Santa Catalina Island, Avalon, CA">
+            <img class="DesignPics" src="./assets/IMG_0681.JPG" width="300" alt="Santa Catalina Island, Avalon, CA">
           </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0661.JPG" width="300" alt="Kirkwood, CA">
+            <img class="DesignPics" src="./assets/IMG_0661.JPG" width="300" alt="Kirkwood, CA">
           </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0667.JPG" width="300" alt="Kirkwood, CA">
+            <img class="DesignPics" src="./assets/IMG_0667.JPG" width="300" alt="Kirkwood, CA">
           </div>
           </div>
         </div>
@@ -65,32 +65,32 @@
         <div class="grid-container">
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0234.jpeg" width="300" alt="tassel">
+            <img class="DesignPics" src="./assets/IMG_0234.jpeg" width="300" alt="tassel">
           </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0244.jpeg" width="300" alt="glitter">
+            <img class="DesignPics" src="./assets/IMG_0244.jpeg" width="300" alt="glitter">
           </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0262.jpeg" width="300" alt="jump">
+            <img class="DesignPics" src="./assets/IMG_0262.jpeg" width="300" alt="jump">
           </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0387.jpg" width="300" alt="front angle top hat">
+            <img class="DesignPics" src="./assets/IMG_0387.jpg" width="300" alt="front angle top hat">
           </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0386.jpeg" width="300" alt="single hand hat hold">
+            <img class="DesignPics" src="./assets/IMG_0386.jpeg" width="300" alt="single hand hat hold">
             </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0392.jpeg" width="300" alt="double hand back angle hold">
+            <img class="DesignPics" src="./assets/IMG_0392.jpeg" width="300" alt="double hand back angle hold">
             </div>
           </div>
         </div>
@@ -102,22 +102,22 @@
         <div class="grid-container1">
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0495.jpeg" width="300" alt="Outdoor Aliyah">
+            <img class="DesignPics" src="./assets/IMG_0495.jpeg" width="300" alt="Outdoor Aliyah">
             </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0515.jpeg" width="300" alt="Indoor Aliyah">
+            <img class="DesignPics" src="./assets/IMG_0515.jpeg" width="300" alt="Indoor Aliyah">
             </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0104.JPG" width="300" alt="Supreme Lighter #1">
+            <img class="DesignPics" src="./assets/IMG_0104.JPG" width="300" alt="Supreme Lighter #1">
             </div>
           </div>
           <div class="grid-item">
             <div data-aos="zoom-in">
-            <img src="./assets/IMG_0107.JPG" width="300" alt="Supreme Lighter #2">
+            <img class="DesignPics" src="./assets/IMG_0107.JPG" width="300" alt="Supreme Lighter #2">
             </div>
           </div>
         </div>
