--- a/bonus.html
+++ b/bonus.html
@@ -20,14 +20,14 @@
 
     <header>
       <div class="logoHeader">
-        <img src="assets/worldfamousLogo.png" width="300px" alt="World Famous Logo">
+        <img class="WorldFamous" src="./assets/worldfamousLogo.png" width="300px" alt="World Famous Logo">
       </div>
     </header>
 
     <section>
       <div class="content">
         <h1 class="EggRoll" span style="font-family:avenir">World Famous Egg Rolls</h1>
-        <img src="./assets/eggRolls.png" width="500" alt="Philly Cheese Steak Egg Roll">
+        <img class="EggRollPic" src="./assets/eggRolls.png" width="500" alt="Philly Cheese Steak Egg Roll">
         <br/>
         <br/>
         <h2 class="EggRoll" span style="font-family:avenir">Contact Us or Visit One of Our Three Locations!</h2>
