--- a/design.html
+++ b/design.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
     <title>Design</title>
   </head>
   <body style="background-color:#FBFFF1">
@@ -20,21 +22,22 @@
       <h1>Design</h1>
         <div>
           <h2 class="phototypes">GUCCI Fashion Brochure</h2>
-            <img class="DesignPics" src="./assets/gucci.jpg" width="900" alt="Catalog Pg 1">
-            <img class="DesignPics" src="./assets/gucci2.jpg" width="900" alt="Catalog Pg 2">
-            <img class="DesignPics" src="./assets/gucci3.jpg" width="900" alt="Catalog Pg 3">
-            <img class="DesignPics" src="./assets/gucci4.jpg" width="900" alt="Catalog Pg 4">
+          <div data-aos="zoom-out"></div>
+            <img class="DesignPics" src="./assets/gucci.jpg" width="100%" alt="Catalog Pg 1">
+            <img class="DesignPics" src="./assets/gucci2.jpg" width="100%" alt="Catalog Pg 2">
+            <img class="DesignPics" src="./assets/gucci3.jpg" width="100%" alt="Catalog Pg 3">
+            <img class="DesignPics" src="./assets/gucci4.jpg" width="100%" alt="Catalog Pg 4">
         </div>
         <br/>
         <div>
           <h2 class="phototypes">App Design</h2>
-            <img class="DesignPics" src="./assets/wya.jpg" width="1100">
+            <img class="DesignPics" src="./assets/wya.jpg" width="100%">
         </div>
         <br/>
         <div>
           <h2 class="phototypes">FIRST Institue Brochure</h2>
-            <img class="DesignPics" src="./assets/firstbrochure.jpg" width="1200">
-            <img class="DesignPics" src="./assets/firstbrochure2.jpg" width="1200">
+            <img class="DesignPics" src="./assets/firstbrochure.jpg" width="100%">
+            <img class="DesignPics" src="./assets/firstbrochure2.jpg" width="100%">
         </div>
     </div>
 
