--- a/design.html
+++ b/design.html
@@ -23,21 +23,21 @@
         <div>
           <h2 class="phototypes">GUCCI Fashion Brochure</h2>
           <div data-aos="zoom-out"></div>
-            <img class="DesignPics" src="./assets/gucci.jpg" width="100%" alt="Catalog Pg 1">
-            <img class="DesignPics" src="./assets/gucci2.jpg" width="100%" alt="Catalog Pg 2">
-            <img class="DesignPics" src="./assets/gucci3.jpg" width="100%" alt="Catalog Pg 3">
-            <img class="DesignPics" src="./assets/gucci4.jpg" width="100%" alt="Catalog Pg 4">
+            <img class="DesignPics" src="./assets/gucci.jpg" width="700" alt="Catalog Pg 1">
+            <img class="DesignPics" src="./assets/gucci2.jpg" width="700" alt="Catalog Pg 2">
+            <img class="DesignPics" src="./assets/gucci3.jpg" width="700" alt="Catalog Pg 3">
+            <img class="DesignPics" src="./assets/gucci4.jpg" width="700" alt="Catalog Pg 4">
         </div>
         <br/>
         <div>
           <h2 class="phototypes">App Design</h2>
-            <img class="DesignPics" src="./assets/wya.jpg" width="100%">
+            <img class="DesignPics" src="./assets/wya.jpg" width="700">
         </div>
         <br/>
         <div>
           <h2 class="phototypes">FIRST Institue Brochure</h2>
-            <img class="DesignPics" src="./assets/firstbrochure.jpg" width="100%">
-            <img class="DesignPics" src="./assets/firstbrochure2.jpg" width="100%">
+            <img class="DesignPics" src="./assets/firstbrochure.jpg" width="700">
+            <img class="DesignPics" src="./assets/firstbrochure2.jpg" width="700">
         </div>
     </div>
 
