--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <section>
   <div class="content">
     <h1 span style="font-family:avenir">KM Designs</h1>
-    <p span style="font-family:avenir">Hi there! I'm Kevin Martinez, and this is my Portfolio. I have experience in a little bit of everything, from photoshop to photography to web design. Click on a link to the left to get started or fill out the form below to get in touch!</p>
+    <p span style="font-family:avenir">Hi there! I'm Kevin Martinez, and this is my Portfolio. I have experience in a little bit of everything, from photoshop to photography to web design. Click on a link above to get started or fill out the form below to get in touch!</p>
   </div>
 </section>
 
